tratando de hacer login y que funcione

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-PORT=3000
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_USER=root
-DB_PASS=
-DB_NAME=gastos
+DB_PASSWORD=
+DB_DATABASE=gastos
+DB_PORT=3306
+JWT_SECRET=clav3_s3cr3t@
+JWT_EXPIRES_IN=1h
