intentamos dockerizar el sitio, y subimos la bd

--- a/.env
+++ b/.env
@@ -1,7 +1,17 @@
-DB_HOST=127.0.0.1
+DB_HOST=192.168.1.222
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=Luca2014
 DB_DATABASE=gastos
 DB_PORT=3306
 JWT_SECRET=clav3_s3cr3t@
 JWT_EXPIRES_IN=1h
+
+
+# conexion local
+# DB_HOST=127.0.0.1
+# DB_USER=root
+# DB_PASSWORD=
+# DB_DATABASE=gastos
+# DB_PORT=3306
+# JWT_SECRET=clav3_s3cr3t@
+# JWT_EXPIRES_IN=1h
