estaria todo funcionando en desarrollo, habria que subir a docker y probar en prod

--- a/.env
+++ b/.env
@@ -1,17 +1,20 @@
-DB_HOST=192.168.1.222
-DB_USER=root
-DB_PASSWORD=Luca2014
-DB_DATABASE=gastos
-DB_PORT=3306
+# 🔹 Modo de ejecución (puede ser 'development' o 'production')
+NODE_ENV=development
+
+# 🔹 Configuración para Desarrollo (Local)
+DB_HOST_DEV=127.0.0.1
+DB_USER_DEV=root
+DB_PASSWORD_DEV=
+DB_DATABASE_DEV=gastos
+DB_PORT_DEV=3306
+
+# 🔸 Configuración para Producción (Servidor)
+DB_HOST_PROD=192.168.1.222  # Dirección IP del servidor donde corre MariaDB
+DB_USER_PROD=root
+DB_PASSWORD_PROD=Luca2014
+DB_DATABASE_PROD=gastos
+DB_PORT_PROD=3306
+
+# 🔐 JWT Configuración
 JWT_SECRET=clav3_s3cr3t@
 JWT_EXPIRES_IN=1h
-
-
-# conexion local
-# DB_HOST=127.0.0.1
-# DB_USER=root
-# DB_PASSWORD=
-# DB_DATABASE=gastos
-# DB_PORT=3306
-# JWT_SECRET=clav3_s3cr3t@
-# JWT_EXPIRES_IN=1h
