--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "mysql2": "^3.13.0",
     "named-placeholders": "^1.1.3",
     "negotiator": "^0.6.3",
+    "node-telegram-bot-api": "^0.66.0",
     "nodemon": "^3.1.9",
     "normalize-path": "^3.0.0",
     "object-assign": "^4.1.1",
