--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
 # 🔹 Modo de ejecución (puede ser 'development' o 'production')
 NODE_ENV=development
 
+
 # 🔹 Configuración para Desarrollo (Local)
-DB_HOST_DEV=192.168.1.222
+DB_HOST_DEV=127.0.0.1
 DB_USER_DEV=root
-DB_PASSWORD_DEV=Luca2014
+DB_PASSWORD_DEV=
 DB_DATABASE_DEV=gastos
 DB_PORT_DEV=3306
 
