--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # 🔹 Modo de ejecución (puede ser 'development' o 'production')
-NODE_ENV=development
+NODE_ENV=production
 
 
 # 🔹 Configuración para Desarrollo (Local)
