--- a/.env
+++ b/.env
@@ -19,3 +19,8 @@ DB_PORT_PROD=3306
 # 🔐 JWT Configuración
 JWT_SECRET=clav3_s3cr3t@
 JWT_EXPIRES_IN=1h
+
+
+# 🔹 URL del backend según el entorno
+BACKEND_URL_DEV=http://localhost:8080
+BACKEND_URL_PROD=http://192.168.1.222:8080
