--- a/.env
+++ b/.env
@@ -23,4 +23,4 @@ JWT_EXPIRES_IN=1h
 
 # 🔹 URL del backend según el entorno
 BACKEND_URL_DEV=http://localhost:8080
-BACKEND_URL_PROD=http://192.168.1.222:8080
+BACKEND_URL_PROD=http://crissferro.net.ar:8080
