modificaciones sobre servidores

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # 🔹 Modo de ejecución (puede ser 'development' o 'production')
-NODE_ENV=production
+NODE_ENV=development
 
 
 # 🔹 Configuración para Desarrollo (Local)
@@ -23,4 +23,4 @@ JWT_EXPIRES_IN=1h
 
 # 🔹 URL del backend según el entorno
 BACKEND_URL_DEV=http://localhost:8080
-BACKEND_URL_PROD=http://crissferro.net.ar:8080
+BACKEND_URL_PROD=http://192.168.1.222:8080
