modificando variables de entorno

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 # 🔹 Modo de ejecución (puede ser 'development' o 'production')
-NODE_ENV=development
-
+NODE_ENV=production
 
 # 🔹 Configuración para Desarrollo (Local)
 DB_HOST_DEV=127.0.0.1
@@ -10,17 +9,25 @@ DB_DATABASE_DEV=gastos
 DB_PORT_DEV=3306
 
 # 🔸 Configuración para Producción (Servidor)
-DB_HOST_PROD=192.168.1.222  # Dirección IP del servidor donde corre MariaDB
+DB_HOST_PROD=mariadb  # Nombre del servicio en Docker (cambiará a IP cuando esté fuera)
 DB_USER_PROD=root
 DB_PASSWORD_PROD=Luca2014
 DB_DATABASE_PROD=gastos
 DB_PORT_PROD=3306
 
+# 🌐 URLs del backend según entorno - estas se usan en la aplicación
+# Para desarrollo local
+BACKEND_URL_DEV=http://localhost:8080
+
+# Para producción - usar diferentes valores según cómo se acceda
+# Cuando se accede por IP
+#BACKEND_URL_PROD=http://192.168.1.222:8080
+# Cuando se accede por dominio (descomentar cuando sea necesario)
+BACKEND_URL_PROD=http://crissferro.net.ar:8080
+
 # 🔐 JWT Configuración
 JWT_SECRET=clav3_s3cr3t@
 JWT_EXPIRES_IN=1h
 
-
-# 🔹 URL del backend según el entorno
-BACKEND_URL_DEV=http://localhost:8080
-BACKEND_URL_PROD=http://192.168.1.222:8080
+# 🚪 Puerto de la aplicación
+PORT=8080
