--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,6 @@
+
+version: '3.8'
+
 services:
   app:
     container_name: gastos_app
@@ -5,6 +8,9 @@ services:
     restart: always
     env_file:
       - .env
+    environment:
+      - NODE_ENV=production
+      - DB_HOST_PROD=mariadb  # Usar el nombre del servicio de BD
     ports:
       - "8080:8080"
     depends_on:
@@ -18,13 +24,50 @@ services:
     container_name: gastos_cron
     build: .
     command: ["node", "cronjob/notificarVencimientos.js"]
+    environment:
+      - NODE_ENV=production
+      - DB_HOST_PROD=mariadb  # Usar el nombre del servicio de BD
     depends_on:
       - app
+      - mariadb
     networks:
       - red_gastos
     volumes:
       - .:/app
 
+  mariadb:
+    container_name: mariadb
+    image: mariadb:latest
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: "Luca2014"
+      MYSQL_DATABASE: "gastos"
+      MYSQL_USER: "usuario"
+      MYSQL_PASSWORD: "clave"
+    ports:
+      - "3306:3306"
+    volumes:
+      - mariadb_data:/var/lib/mysql
+    networks:
+      - red_gastos
+
+  phpmyadmin:
+    container_name: phpmyadmin
+    image: phpmyadmin/phpmyadmin:latest
+    restart: always
+    ports:
+      - "8081:80"
+    environment:
+      PMA_HOST: mariadb
+      MYSQL_ROOT_PASSWORD: "Luca2014"
+    depends_on:
+      - mariadb
+    networks:
+      - red_gastos
+
 networks:
   red_gastos:
-    external: false
+    driver: bridge
+
+volumes:
+  mariadb_data:
