configurando https y webhook

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # 🔹 Modo de ejecución (puede ser 'development' o 'production')
-NODE_ENV=production
+NODE_ENV=development
 
 # 🔹 Configuración para Desarrollo (Local)
 DB_HOST_DEV=127.0.0.1
@@ -23,7 +23,7 @@ BACKEND_URL_DEV=http://localhost:8080
 # Cuando se accede por IP
 #BACKEND_URL_PROD=http://192.168.1.222:8080
 # Cuando se accede por dominio (descomentar cuando sea necesario)
-BACKEND_URL_PROD=http://crissferro.net.ar:8080
+BACKEND_URL_PROD=https://web.crissferro.net.ar
 
 # 🔐 JWT Configuración
 JWT_SECRET=clav3_s3cr3t@
