modificamos telegram para mejorar la logica dividiendo en archivos diferentes

--- a/.env
+++ b/.env
@@ -31,3 +31,7 @@ JWT_EXPIRES_IN=1h
 
 # 🚪 Puerto de la aplicación
 PORT=8080
+
+# token telegram chat
+
+TELEGRAM_BOT_TOKEN=7290653879:AAEEBQIF_lbgzrYq45hqatOrh4EVQnz0G0M
