--- a/.env
+++ b/.env
@@ -23,7 +23,10 @@ BACKEND_URL_DEV=http://localhost:8080
 # Cuando se accede por IP
 #BACKEND_URL_PROD=http://192.168.1.222:8080
 # Cuando se accede por dominio (descomentar cuando sea necesario)
-BACKEND_URL_PROD=https://web.crissferro.net.ar
+# BACKEND_URL_PROD=https://web.crissferro.net.ar
+BACKEND_URL_PROD=http://192.168.1.222:8080
+
+
 
 # 🔐 JWT Configuración
 JWT_SECRET=clav3_s3cr3t@
